UpKbdBacklight: don't check the *end value when using g_ascii_strtoll

g_ascii_strtoll would set end to match buf when a parsing error occurred,
so there's no reason to also check what this is pointing to

https://bugs.freedesktop.org/show_bug.cgi?id=96215